# cpp-snake

./: CMakeLists.txt  Dockerfile  docker-compose.yml
include/: constants.h  food.h  game_manager.h  snake.h
src/: food.cpp  game_manager.cpp  main.cpp  snake.cpp
